<resources>
    <string name="app_name">FreepayKotlin</string>

    <string name="main_activity_title">官方活动</string>
    <string name="main_punch_card">去打卡</string>
    <string name="main_punch_number">2w人+ 正在打卡</string>
    <string name="main_punch_money">原价 289元</string>
    <string name="main_punch_content">旅游一卡通 6000多景点免费畅游</string>


    <string name="my_activities">我的活动</string>
    <string name="view_more">查看更多</string>
    <string name="examine">查看</string>
    <string name="official_activity">官方活动</string>
    <string name="account_to_be_credited">收款账户</string>
    <string name="account_security">账户安全</string>
    <string name="login_immediately">立即登录</string>
    <string name="on_board_activity">已上车活动</string>
    <string name="mine">我的</string>
    <string name="set">设置</string>
    <string name="privacy_policy">隐私条款</string>
    <string name="version_updating">版本更新</string>
    <string name="log_out">退出登录</string>
    <string name="customer_use">已阅读并同意《用户使用与隐私协议》</string>
    <string name="my_bank_card">我的银行卡</string>
    <string name="add_a_bank_card_ten">＋ 添加银行卡</string>
    <string name="add_a_bank_card">添加银行卡</string>
    <string name="my_zfb">我的支付宝账户</string>
    <string name="my_wx">我的微信支付账户</string>
    <string name="card_number">卡号</string>
    <string name="bind_my_bank">请绑定持卡人本人的银行卡</string>
    <string name="bank_ame">银行名</string>
    <string name="bind_phone_card">绑定手机号</string>
    <string name="please_bind_phone_card">请绑定你的手机号</string>
    <string name="bind_id_card">绑定身份证</string>
    <string name="id_card">绑定身份证</string>
    <string name="phone_card">手机号</string>
    <string name="enter_phone_number">请输入手机号</string>
    <string name="auth_code">验证码</string>
    <string name="enter_auth_code">请输入收到验证码</string>
    <string name="id_number">身份证号</string>
    <string name="real_name">真实姓名</string>
    <string name="enter_18_id_card">请输入18位身份证号</string>
    <string name="enter_real_name">请输入身份证上的姓名</string>
    <string name="latest_version">当前是最新版本</string>
    <string name="home_page">首页</string>
    <string name="discover_page">发现</string>
</resources>