<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_home_LL"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:background="@drawable/daily_item_body_bg"
    android:orientation="vertical"
    android:elevation="5dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp">

    <com.junxin.freepaykotlin.view.RoundImageView
        android:id="@+id/home_rv_item_img"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/list_item_one" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="13.5dp">

        <TextView
            android:id="@+id/home_rv_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_title"
            android:textColor="@color/app_color_black"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_rv_item_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/main_punch_content"
            android:textColor="@color/app_color_999"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_rv_item_title" />


        <TextView
            android:id="@+id/home_rv_item_bottom_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/main_punch_money"
            android:textColor="@color/app_color_020"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_rv_item_des" />

        <TextView
            android:id="@+id/home_rv_item_bottom_peaple_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="142dp"
            android:layout_marginRight="15dp"
            android:text="@string/main_punch_number"
            android:textColor="@color/app_color_999"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/home_rv_item_bottom_price"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/btn_punch"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:background="@drawable/bg_look_over"
            android:text="@string/main_punch_card"
            android:textColor="@color/app_color_white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/home_rv_item_bottom_price"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>