<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/home_item_mine_ctl_all"
        android:layout_marginTop="-10dp"
        android:background="@color/app_color_f3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_item_mine_ctl_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_mine_task_on"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/home_item_mine_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/my_activities"
            android:textColor="@color/app_color_black"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/home_item_mine_all_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="6dp"
            android:text="@string/view_more"
            android:textColor="@color/app_color_F35"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/home_item_mine_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/home_item_mine_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_item_mine_ctl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingBottom="15dp"
            app:layout_constraintTop_toBottomOf="@+id/home_item_mine_title">

            <com.junxin.freepaykotlin.view.RoundImageView
                android:id="@+id/home_item_mine_iv"
                android:layout_width="143.5dp"
                android:layout_height="70.5dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/icon_test"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/home_item_mine_tv"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="6dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="阿斯顿发顺丰顺丰粉"
                android:textColor="@color/app_color_black"
                android:textSize="17sp"
                app:layout_constraintLeft_toRightOf="@+id/home_item_mine_iv"
                app:layout_constraintTop_toTopOf="@+id/home_item_mine_iv" />

            <TextView
                android:id="@+id/home_item_mine_tv_sub"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="14dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="旅游一卡通 6000多景点免…"
                android:textColor="@color/app_color_999"
                android:textSize="14sp"
                app:layout_constraintLeft_toRightOf="@+id/home_item_mine_iv"
                app:layout_constraintTop_toBottomOf="@+id/home_item_mine_tv" />

            <Button
                android:id="@+id/home_item_mine_btn"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:background="@drawable/bg_look_over"
                android:text="@string/examine"
                android:textColor="@color/app_color_white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_item_mine_ctl_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            app:layout_constraintTop_toBottomOf="@+id/home_item_mine_ctl">

            <com.junxin.freepaykotlin.view.RoundImageView
                android:id="@+id/home_item_mine_iv_two"
                android:layout_width="143.5dp"
                android:layout_height="70.5dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/icon_test"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/home_item_mine_tv_two"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="6dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="阿斯顿发顺丰顺丰粉"
                android:textColor="@color/app_color_black"
                android:textSize="17sp"
                app:layout_constraintLeft_toRightOf="@+id/home_item_mine_iv_two"
                app:layout_constraintTop_toTopOf="@+id/home_item_mine_iv_two" />

            <TextView
                android:id="@+id/home_item_mine_tv_sub_two"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="14dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="旅游一卡通 6000多景点免…"
                android:textColor="@color/app_color_999"
                android:textSize="14sp"
                app:layout_constraintLeft_toRightOf="@+id/home_item_mine_iv_two"
                app:layout_constraintTop_toBottomOf="@+id/home_item_mine_tv_two" />

            <Button
                android:id="@+id/home_item_mine_btn_two"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:background="@drawable/bg_look_over"
                android:text="@string/examine"
                android:textColor="@color/app_color_white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>